--- a/index.html
+++ b/index.html
@@ -3,43 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Roshni Venkatesan's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Roshni Venkatesan</h1>
-        <p>Cybersecurity Enthusiast | Full-Stack Developer | Toastmaster</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Welcome to my portfolio! I am a final-year B.Tech student specializing in Cybersecurity with experience in full-stack development and leadership roles.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
+        <p>4th Year B.Tech CSE (Cybersecurity)</p>
+        <nav>
             <ul>
-                <li>
-                    <h3>Project 1</h3>
-                    <p>Description of Project 1...</p>
-                </li>
-                <li>
-                    <h3>Project 2</h3>
-                    <p>Description of Project 2...</p>
-                </li>
-                <!-- Add more projects here -->
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="experience.html">Work Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="certifications.html">Certifications</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:roshnivenkatesan04@gmail.com">roshnivenkatesan04@gmail.com</a></p>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome to My Portfolio</h2>
+            <p>Explore my projects, work experience, certifications, and more!</p>
         </section>
     </main>
     <footer>
