--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roshni Venkatesan's Portfolio</title>
+    <title>Roshni Venkatesan - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Roshni Venkatesan</h1>
-        <p>4th Year B.Tech CSE (Cybersecurity)</p>
         <nav>
             <ul>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="experience.html">Work Experience</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="certifications.html">Certifications</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <h2>Welcome to My Portfolio</h2>
-            <p>Explore my projects, work experience, certifications, and more!</p>
+            <p>Hello! I'm Roshni Venkatesan, a B.Tech CSE student specializing in Cybersecurity. Explore my work and feel free to reach out!</p>
+            <img src="profile-picture.jpg" alt="Roshni Venkatesan">
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Roshni Venkatesan</p>
     </footer>
